--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
     rel="stylesheet">
   <!-- css.gg -->
-  <link href='https://css.gg/loadbar-alt.css' rel='stylesheet'>
+  <link href='https://unpkg.com/css.gg@2.0.0/icons/css/loadbar-alt.css' rel='stylesheet'>
 </head>
 
 <body>
